gap removed review boxes fixed

--- a/PLC.css
+++ b/PLC.css
@@ -391,8 +391,8 @@ label{
     height: 100%;
     display: flex;
     justify-content: space-around;
-    gap: 40px;
     transition: transform 0.4s ease;
+
    
 }
 
@@ -405,7 +405,8 @@ label{
     display: flex;
     flex-direction: row;
     font-size: 30px;
-    color: white;      
+    color: white;  
+    border-right: 1px solid black;    
 }
 .company-name-and-stars{
     width: 40%;
